<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <Button
        android:id="@+id/send_notification"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/text_send" />


    <Button
        android:id="@+id/send_notification_with_sound"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/text_send_sound" />


    <Button
        android:id="@+id/send_notification_with_vibrate"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/text_send_vibrate" />


    <Button
        android:id="@+id/send_notification_with_lights"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/text_send_lights" />


    <Button
        android:id="@+id/send_notification_with_default"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/text_send_default" />



</LinearLayout>